// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApolloContainer testMapStateToProps 1`] = `
Object {
  "data": Object {
    "region": Object {
      "id": "oakland",
    },
  },
  "regionId": "oakland",
}
`;

exports[`ApolloContainer testQuery 1`] = `
Object {
  "data": Object {
    "store": Object {
      "__typename": "Store",
      "region": Object {
        "__typename": "Region",
        "id": "oakland",
        Symbol(id): "Region:oakland",
      },
      Symbol(id): "$ROOT_QUERY.store",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`ApolloContainer testRender 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "oakland",
    },
  },
  "regionId": "oakland",
}
`;

exports[`ApolloContainer testRender 2`] = `
Object {
  "className": "success",
}
`;

exports[`ApolloContainer testRenderError 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "foo",
    },
  },
  "regionId": "oakland",
}
`;

exports[`ApolloContainer testRenderError 2`] = `
Object {
  "children": "Original Error: Did not find exactly one: { all: [ { id: 'oakland', name: 'Oakland' } ], matching: [] }
Original Trace Error: Did not find exactly one: { all: [ { id: 'oakland', name: 'Oakland' } ], matching: [] }
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/rescape-ramda/lib/throwingFunctions.js:57:11
    at InternalConstructor.mapError (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/result/result.js:291:20)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/rescape-ramda/lib/throwingFunctions.js:54:17
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/ramda/src/internal/_curryN.js:37:27
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/ramda/src/internal/_arity.js:14:19
    at findOneValueByParamsThrowing (/Users/andy/code/rescape/rescape-helpers-test/node_modules/rescape-ramda/lib/throwingFunctions.js:153:10)
    at region (/Users/andy/code/rescape/rescape-helpers-test/src/sampleData.js:87:63)
    at resolveFieldValueOrError (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:531:18)
    at resolveField (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:495:16)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:364:18
    at Array.reduce (<anonymous>)
    at executeFields (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:361:42)
    at collectAndExecuteSubfields (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:772:10)
    at completeObjectValue (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:762:10)
    at completeValue (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:660:12)
    at completeValueWithLocatedError (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:580:21)
    at completeValueCatchingError (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:556:21)
    at resolveField (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:497:10)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:364:18
    at Array.reduce (<anonymous>)
    at executeFields (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:361:42)
    at executeOperation (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:289:122)
    at executeImpl (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:154:14)
    at Object.execute (/Users/andy/code/rescape/rescape-helpers-test/node_modules/graphql/execution/execute.js:131:229)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/apollo-link-schema/src/schemaLink.ts:43:9
    at new Subscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:179:34)
    at Observable.subscribe (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:258:14)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/apollo-link-dedup/src/dedupLink.ts:55:41
    at new Subscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:179:34)
    at Observable.subscribe (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:258:14)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1061:66
    at new Promise (<anonymous>)
    at QueryManager.Object.<anonymous>.QueryManager.fetchRequest (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1059:12)
    at QueryManager.Object.<anonymous>.QueryManager.fetchQuery (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:375:34)
    at QueryManager.Object.<anonymous>.QueryManager.startQuery (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:882:10)
    at ObservableQuery.Object.<anonymous>.ObservableQuery.setUpQuery (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/ObservableQuery.ts:590:23)
    at ObservableQuery.Object.<anonymous>.ObservableQuery.onSubscribe (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/ObservableQuery.ts:549:43)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/ObservableQuery.ts:96:12
    at new Subscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:179:34)
    at ObservableQuery.subscribe (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:258:14)
    at Query._this.startQuerySubscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:323:65)
    at Query.Object.<anonymous>.Query.componentDidMount (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:421:18)
    at commitLifeCycles (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:14361:22)
    at commitAllLifeCycles (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:15462:7)
    at Object.invokeGuardedCallback (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:42:10)
    at invokeGuardedCallback (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:187:29)
    at commitRoot (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:15603:7)
    at completeRoot (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16618:34)
    at performWorkOnRoot (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16563:9)
    at performWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16482:7)
    at performSyncWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16454:3)
    at requestWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16354:5)
    at scheduleWork$1 (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16218:11)
    at scheduleRootUpdate (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16785:3)
    at updateContainerAtExpirationTime (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16812:10)
    at updateContainer (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16839:10)
    at ReactRoot.Object.<anonymous>.ReactRoot.render (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:17122:3)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:17262:14
    at unbatchedUpdates (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16679:10)
    at legacyRenderSubtreeIntoContainer (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:17258:5)
    at Object.render (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:17317:12)
    at Object.render (/Users/andy/code/rescape/rescape-helpers-test/node_modules/enzyme-adapter-react-16/build/ReactSixteenAdapter.js:218:50)
    at new ReactWrapper (/Users/andy/code/rescape/rescape-helpers-test/node_modules/enzyme/build/ReactWrapper.js:98:16)
    at mount (/Users/andy/code/rescape/rescape-helpers-test/node_modules/enzyme/build/mount.js:19:10)
    at wrapWithMockGraphqlAndStore (/Users/andy/code/rescape/rescape-helpers-test/src/componentTestHelpers.js:186:28)
    at /Users/andy/code/rescape/rescape-helpers-test/src/apolloContainerTestHelpers.js:237:75
    at Object.onResolved (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/task/_task.js:70:13)
    at Object.Resolved (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/future/_deferred.js:167:24)
    at InternalConstructor.matchWith (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/adt/union/union.js:67:27)
    at Deferred.listen (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/future/_deferred.js:158:17)
    at TaskExecution.listen (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/task/_task-execution.js:41:22)
    at Task._computation (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/task/_task.js:66:19)
    at Task.run (/Users/andy/code/rescape/rescape-helpers-test/node_modules/folktale/concurrency/task/_task.js:443:28)
    at Object.testRenderError (/Users/andy/code/rescape/rescape-helpers-test/src/apolloContainerTestHelpers.js:242:8)
    at resolve (/Users/andy/code/rescape/rescape-helpers-test/node_modules/jest-jasmine2/build/queue_runner.js:56:12)
    at new Promise (<anonymous>)
    at mapper (/Users/andy/code/rescape/rescape-helpers-test/node_modules/jest-jasmine2/build/queue_runner.js:43:19)
    at promise.then (/Users/andy/code/rescape/rescape-helpers-test/node_modules/jest-jasmine2/build/queue_runner.js:87:41)
Error: GraphQL error: Did not find exactly one: { all: [ { id: 'oakland', name: 'Oakland' } ], matching: [] }
Trace: Error: GraphQL error: Did not find exactly one: { all: [ { id: 'oakland', name: 'Oakland' } ], matching: [] }
    at new ApolloError (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/errors/ApolloError.ts:56:5)
    at Query._this.getQueryResult (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:367:29)
    at Query.Object.<anonymous>.Query.render (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:465:36)
    at finishClassComponent (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:13193:31)
    at updateClassComponent (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:13155:10)
    at beginWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:13824:14)
    at performUnitOfWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:15863:12)
    at workLoop (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:15902:24)
    at renderRoot (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:15942:7)
    at performWorkOnRoot (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16560:22)
    at performWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16482:7)
    at performSyncWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16454:3)
    at requestWork (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16354:5)
    at scheduleWork$1 (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:16218:11)
    at Object.enqueueForceUpdate (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-dom/cjs/react-dom.development.js:11336:5)
    at Query.Object.<anonymous>.Component.forceUpdate (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react/cjs/react.development.js:288:16)
    at Query._this.updateCurrentData (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:358:27)
    at Object.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/react-apollo/react-apollo.umd.js:329:31)
    at notifySubscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:126:18)
    at onNotify (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:161:3)
    at SubscriptionObserver.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:215:7)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/ObservableQuery.ts:582:55
    at Array.forEach (<anonymous>)
    at Object.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/ObservableQuery.ts:582:24)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:598:26
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1027:11
    at Array.forEach (<anonymous>)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1026:10
    at Map.forEach (<anonymous>)
    at QueryManager.Object.<anonymous>.QueryManager.broadcastQueries (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1020:18)
    at Object.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/src/core/QueryManager.ts:1093:18)
    at notifySubscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:126:18)
    at onNotify (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:161:3)
    at SubscriptionObserver.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:215:7)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/apollo-link-dedup/src/dedupLink.ts:60:43
    at Array.forEach (<anonymous>)
    at Object.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/apollo-link-dedup/src/dedupLink.ts:60:27)
    at notifySubscription (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:126:18)
    at onNotify (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:161:3)
    at SubscriptionObserver.next (/Users/andy/code/rescape/rescape-helpers-test/node_modules/zen-observable/lib/Observable.js:215:7)
    at /Users/andy/code/rescape/rescape-helpers-test/node_modules/apollo-link-schema/src/schemaLink.ts:56:22",
  "className": "error",
}
`;
